syntax = "proto2";

package stremio.core.runtime;

option java_package = "com.stremio.core.runtime.msg";

import "google/protobuf/empty.proto";
import "stremio/core/models/streaming_server.proto";

message ActionStreamingServer {
  oneof args {
    google.protobuf.Empty reload = 1;
    stremio.core.models.StreamingServer.Settings update_settings = 2;
  }
}