syntax = "proto2";

package stremio.core.runtime;

option java_package = "com.stremio.core.runtime.msg";

import "stremio/core/runtime/action_catalogs_with_extra.proto";
import "stremio/core/runtime/action_catalog_with_filters.proto";
import "stremio/core/runtime/action_library_by_type.proto";
import "stremio/core/runtime/action_ctx.proto";
import "stremio/core/runtime/action_link.proto";
import "stremio/core/runtime/action_load.proto";
import "stremio/core/runtime/action_meta_details.proto";
import "stremio/core/runtime/action_player.proto";
import "stremio/core/runtime/action_streaming_server.proto";
import "stremio/core/runtime/field.proto";

message RuntimeAction {
  optional Field field = 1;
  required Action action = 2;
}

message Action {
  oneof type {
    ActionCtx ctx = 1;
    ActionLink link = 2;
    ActionCatalogWithFilters catalog_with_filters = 3;
    ActionCatalogsWithExtra catalogs_with_extra = 4;
    ActionLibraryByType library_by_type = 5;
    ActionMetaDetails meta_details = 6;
    ActionStreamingServer streaming_server = 7;
    ActionPlayer player = 8;
    ActionLoad load = 9;
    ActionUnload unload = 10;
  }

  message ActionUnload {
  }
}